--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,3 +20,18 @@ jobs:
         uses: docker://trion/ng-cli-e2e:latest
         with:
           args: ng e2e
+
+      - name: Deployment auf GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "${GITHUB_ACTOR}@example.com"
+          git checkout "gh-pages"
+          rm -rf !("dist")
+          find dist -mindepth 2 -exec mv {} . \;
+          rmdir -r dist
+          git add .
+          git commit -m "updated GitHub Pages"
+          git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          git push --force-with-lease origin gh-pages
