--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "${GITHUB_ACTOR}@example.com"
-          git checkout "gh-pages"
+          git checkout gh-pages origin/gh-pages
           rm -rf !("dist")
           find dist -mindepth 2 -exec mv {} . \;
           rmdir -r dist
