--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: E2E Test Angular app with GitHub Actions and Protractor
         uses: docker://trion/ng-cli-e2e:latest
         with:
-          args: ng e2e; chown -R a+rw node_modules
+          args: (ng e2e; chown -R a+w node_modules)
 
       - name: Deployment auf GitHub Pages
         env:
