--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,11 +23,10 @@ jobs:
         with:
           args: ng e2e
 
-
       - name: Production build
         uses: docker://trion/ng-cli:latest
         with:
-          args: ng build --prod --progress=false
+          args: ng build --prod --progress=false --base-href=${GITHUB_REPOSITORY}
 
       - name: Berechtigungen fixen
         uses: docker://trion/ng-cli-e2e:latest
