--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Berechtigungen fixen
         uses: docker://trion/ng-cli:latest
         with:
-          args: chmod -R a+w node_modules dist
+          args: chmod -f -R a+w node_modules dist || true
 
       - name: Deployment auf GitHub Pages
         env:
