--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,12 +28,12 @@ jobs:
       - name: Production build
         uses: docker://trion/ng-cli:latest
         with:
-          args: ng build --prod --progress=false --base-href=${GITHUB_REPOSITORY}
+          args: /bin/sh -c "ng build --prod --progress=false --base-href=${GITHUB_REPOSITORY}; rm -rf node_modules"
 
       - name: Berechtigungen fixen
         uses: docker://trion/ng-cli:latest
         with:
-          args: /bin/sh -c "chmod -f -R a+w node_modules dist || true"
+          args: chmod -f -R a+rwx dist
 
       - name: Deployment auf GitHub Pages
         env:
