--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,9 @@ jobs:
           chmod a+w dist
 
       - name: Clean install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          chmod -R a+rwx node_modules
 
       - name: Test Angular app with GitHub Actions and Karma
         uses: docker://trion/ng-cli-karma:latest
