--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,12 +30,7 @@ jobs:
       - name: Production build
         uses: docker://trion/ng-cli:latest
         with:
-          args: /bin/sh -c "ng build --prod --progress=false --base-href=${GITHUB_REPOSITORY}; rm -rf node_modules"
-
-      - name: Berechtigungen fixen
-        uses: docker://trion/ng-cli:latest
-        with:
-          args: chmod -f -R a+rwx dist
+          args: /bin/sh -c "ng build --prod --progress=false --base-href=${GITHUB_REPOSITORY}; rm -rf node_modules; chmod -f -R a+rwx dist; true"
 
       - name: Deployment auf GitHub Pages
         env:
