--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
           git checkout gh-pages
           ls | grep -v dist | xargs rm -r
           find dist -mindepth 2 -exec mv {} . \;
-          rmdir -r dist
+          rm -fr dist
           git add .
           git commit -m "updated GitHub Pages"
           git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
