--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Check out repository (all branches)
         uses: actions/checkout@v2
-      - run: |
+        run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           mkdir dist
           chmod a+w dist
